latest version pushed to dellin.net
git-svn-id: svn+ssh://hal.personalrobotics.ri.cmu.edu/old_svn/etc/people/cdellin/docs/fast-manip@33172

--- a/ch01-intro.tex
+++ b/ch01-intro.tex
@@ -164,6 +164,7 @@ We survey them here.
       It is therefore important for planning approaches
       to accurately model and reason about this tradeoff.
       }
+   \label{fig:plan-exec-cost}
 \end{figure*}
 
 %\footnotetext{Image Credit:
