--- a/ch11-proposed.tex
+++ b/ch11-proposed.tex
@@ -10,61 +10,88 @@ This section discusses each question in turn.
 See Table~\ref{table:proposed-timeline} for a timeline.
 
 \begin{center}
+{\setlength{\tabcolsep}{3pt}
 \begin{tabular}{llc}
 \toprule
    \multicolumn{2}{l}{Research Question}
-      & Chapter \\
+      & Sec. \\
 \midrule
    \ref{ques:choosing-lambda}
       &
-      \begin{minipage}[c]{0.75\columnwidth}%
+      \begin{minipage}[c]{0.83\columnwidth}%
+      \vspace{0.05in}
+      \begin{spacing}{0.7}
       \nameref{ques:choosing-lambda}
+      \end{spacing}%
+      \vspace{0in}
       \end{minipage}%
-      & \ref{chap:e8} \\[12pt]
+      & \ref{chap:e8} \\[20pt]
    \ref{ques:incremental-search}
       &
-      \begin{minipage}[c]{0.75\columnwidth}%
+      \begin{minipage}[c]{0.83\columnwidth}%
+      \begin{spacing}{0.7}
       \nameref{ques:incremental-search}
+      \end{spacing}%
+      \vspace{0in}
       \end{minipage}%
       & \ref{chap:e8} \\[12pt]
    \ref{ques:e8-comparisons}
       &
-      \begin{minipage}[c]{0.75\columnwidth}%
+      \begin{minipage}[c]{0.83\columnwidth}%
+      \begin{spacing}{0.7}
       \nameref{ques:e8-comparisons}
+      \end{spacing}%
+      \vspace{0in}
       \end{minipage}%
       & \ref{chap:e8} \\[12pt]
    \ref{ques:batching}
       &
-      \begin{minipage}[c]{0.75\columnwidth}%
+      \begin{minipage}[c]{0.83\columnwidth}%
+      \begin{spacing}{0.7}
       \nameref{ques:batching}
+      \end{spacing}%
+      \vspace{0in}
       \end{minipage}%
       & \ref{chap:graphs-in-continuous} \\[12pt]
    \ref{ques:evalpath}
       &
-      \begin{minipage}[c]{0.75\columnwidth}%
+      \begin{minipage}[c]{0.83\columnwidth}%
+      \begin{spacing}{0.7}
       \nameref{ques:evalpath}
+      \end{spacing}%
+      \vspace{0in}
       \end{minipage}%
       & \ref{chap:graphs-in-continuous} \\[12pt]
    \ref{ques:multi-set-suited}
       &
-      \begin{minipage}[c]{0.75\columnwidth}%
+      \begin{minipage}[c]{0.83\columnwidth}%
+      \begin{spacing}{0.7}
       \nameref{ques:multi-set-suited}
+      \end{spacing}%
+      \vspace{0in}
       \end{minipage}%
       & \ref{chap:multi-set-prm} \\[12pt]
    \ref{ques:how-sequence}
       &
-      \begin{minipage}[c]{0.75\columnwidth}%
+      \begin{minipage}[c]{0.83\columnwidth}%
+      \begin{spacing}{0.7}
       \nameref{ques:how-sequence}
+      \end{spacing}%
+      \vspace{0in}
       \end{minipage}%
       & \ref{chap:task-planning} \\[12pt]
    \ref{ques:proteus-compare}
       &
-      \begin{minipage}[c]{0.75\columnwidth}%
+      \begin{minipage}[c]{0.83\columnwidth}%
+      \begin{spacing}{0.7}
       \nameref{ques:proteus-compare}
+      \end{spacing}%
+      \vspace{0in}
       \end{minipage}%
       & \ref{chap:task-planning} \\[12pt]
 \bottomrule
 \end{tabular}
+}%tabcolsep
 \end{center}
 
 {
